--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "website",
   "version": "0.1.0",
-  "homepage": "https://kryonchain.github.io/website",
+  "homepage": "https://kryonchain.com",
   "private": true,
   "dependencies": {
     "@lucide/lab": "^0.1.2",
