--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "website",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@lucide/lab": "^0.1.2",
